--- a/charts/dp-bwce-app/templates/ingress-kong.yaml
+++ b/charts/dp-bwce-app/templates/ingress-kong.yaml
@@ -45,7 +45,11 @@ spec:
             name: {{ include "dp-bwce-app.fullname" $dot }}
             port:
               number: {{ $path.port }}
+        {{- if eq $path.path "/" }}
+        path: {{ $path.path }}(.*)
+        {{- else }}
         path: {{ $path.path }}/(.*)
+        {{- end }}
         pathType: {{ $path.pathType }}
 
 --- 
