--- a/charts/dp-bw-adapter/templates/deployment.yaml
+++ b/charts/dp-bw-adapter/templates/deployment.yaml
@@ -29,7 +29,8 @@ spec:
       labels:
         {{- include "bwadapter.selectorLabels" . | nindent 8 }}
         networking.platform.tibco.com/kubernetes-api: enable
-        egress.networking.platform.tibco.com/internet-web: enable
+        networking.platform.tibco.com/internet-egress: enable
+        networking.platform.tibco.com/tea: enable
     spec:
       imagePullSecrets:
       - name: {{ .Values.global.cp.containerRegistry.secret }}
