--- a/charts/dp-bwce-mon/values.yaml
+++ b/charts/dp-bwce-mon/values.yaml
@@ -12,7 +12,7 @@ global:
     instanceId: defaultinstid
     containerRegistry:
       secret: ""
-      url: reldocker.tibco.com
+      url: ""
       repository: "tibco-platform-docker-prod"
     environmentType: ""
     enableResourceConstraints: true
