--- a/charts/tp-cp-bwce-utilities/charts/bwce-utilities/templates/job-bw-studio.yaml
+++ b/charts/tp-cp-bwce-utilities/charts/bwce-utilities/templates/job-bw-studio.yaml
@@ -28,8 +28,7 @@ spec:
       {{- end }}
       labels:
         {{- include "bwce-utilities.selectorLabels" $dot | nindent 8 }}
-        egress.networking.platform.tibco.com/internet-all: enable
-        egress.networking.platform.tibco.com/cluster-all: enable
+        {{- include "bwce-utilities.networkPolicyLabels" $dot | nindent 8 }}
     spec:
       nodeSelector:
         kubernetes.io/os: linux
