--- a/charts/tp-cp-bwce-utilities/charts/bwce-utilities/values.yaml
+++ b/charts/tp-cp-bwce-utilities/charts/bwce-utilities/values.yaml
@@ -115,8 +115,12 @@ bwStudioImages:
     path: /opt/downloads/
     tag: 2.10.0-HF2-hotfix-amd64
     target_location: bwce-studio/2.10.0-HF2/hotfix-amd64/
-bwStudioDelete: true
-bwStudioDeleteVersions: "2.9.0"
+  - image: tp-bw-studio
+    path: /opt/downloads/
+    tag: 2.10.0-HF3-hotfix-amd64
+    target_location: bwce-studio/2.10.0-HF3/hotfix-amd64/
+bwStudioDelete: false
+bwStudioDeleteVersions: ""
 
 bwPluginsJobA:
   tci-bw-plugin-customplugin:
@@ -197,8 +201,8 @@ bwPluginsJobB:
 bwPluginsJobC:
   tci-bw-plugin-adbplugin:
     tags:
-      - 8.6.0.v38-tci-2.0
-    default: 8.6.0.v38-tci-2.0
+      - 8.6.0.v40-tci-2.0
+    default: 8.6.0.v40-tci-2.0
   tci-bw-plugin-bigquery:
     tags:
       - 6.1.0.v9.1-tci-2.0
@@ -225,8 +229,8 @@ bwPluginsJobC:
     default: 6.0.2.v6-tci-2.0
   tci-bw-plugin-kafka:
     tags:
-      - 6.8.2.v6-tci-2.0
-    default: 6.8.2.v6-tci-2.0
+      - 6.8.2.v8-tci-2.0
+    default: 6.8.2.v8-tci-2.0
   tci-bw-plugin-siebel:
     tags:
       - 7.3.0.v3.0.1-tci-2.0
@@ -239,8 +243,8 @@ bwPluginsJobD:
     default: 6.1.1.v14-tci-2.0
   tci-bw-plugin-dataconversion:
     tags:
-      - 4.7.0.v12-tci-2.0
-    default: 4.7.0.v12-tci-2.0
+      - 4.8.0.v1-tci-2.0
+    default: 4.8.0.v1-tci-2.0
   tci-bw-plugin-snowflake:
     tags:
       - 6.3.0.v5-tci-2.0
@@ -251,8 +255,8 @@ bwPluginsJobD:
     default: 6.6.0.v5.1-tci-2.0
   tci-bw-plugin-cassandra:
     tags:
-      - 6.3.2.v9.1-tci-2.0
-    default: 6.3.2.v9.1-tci-2.0
+      - 6.3.3.v12-tci-2.0
+    default: 6.3.3.v12-tci-2.0
   tci-bw-plugin-eftl:
     tags:
       - 6.0.0.v33-tci-2.0
@@ -273,8 +277,8 @@ bwPluginsJobD:
 bwPluginsJobE:
   tci-bw-plugin-mi:
     tags:
-      - 6.4.0.v4-tci-2.0
-    default: 6.4.0.v4-tci-2.0
+      - 6.4.0.v5.1-tci-2.0
+    default: 6.4.0.v5.1-tci-2.0
   tci-bw-plugin-redis:
     tags:
       - 6.1.0.v6.2-tci-2.0
@@ -293,8 +297,8 @@ bwPluginsJobE:
     default: 8.3.0.v7-tci-2.0
   tci-bw-plugin-firefly:
     tags:
-      - 8.1.0.v12.0.1-tci-2.0
-    default: 8.1.0.v12.0.1-tci-2.0
+      - 8.1.0.v21-tci-2.0
+    default: 8.1.0.v21-tci-2.0
   tci-bw-plugin-saphana:
     tags:
       - 6.1.0.v5.2-tci-2.0
@@ -331,8 +335,8 @@ bwPluginsJobF:
     default: 6.5.1.v5-tci-2.0
   tci-bw-plugin-ftl:
     tags:
-      - 6.7.1.v3-tci-2.0
-    default: 6.7.1.v3-tci-2.0
+      - 6.7.2.v3-tci-2.0
+    default: 6.7.2.v3-tci-2.0
   tci-bw-plugin-workday:
     tags:
       - 6.0.1.v13.3-tci-2.0
@@ -401,11 +405,7 @@ buildtypeImages:
 - name: tp-bwce-buildtype
   extract_image: true
   path: /var/lib/bwce/buildtypes
-  tag: 2.10.0-HF2
-  target_location: bwce/buildtypes
-- name: tp-bwce-buildtype
-  delete_image: true
-  tag: 2.9.0
+  tag: 2.10.0-HF3
   target_location: bwce/buildtypes
 
 probes:
