--- a/charts/tp-cp-flogo-recipes/templates/flogo.yaml
+++ b/charts/tp-cp-flogo-recipes/templates/flogo.yaml
@@ -12,15 +12,15 @@ metadata:
 data:
   version.json: |
     {
-      "capabilityVersion": "1.6.0",
-      "minCPVersion": "1.6.0",
+      "capabilityVersion": "1.7.0",
+      "minCPVersion": "1.7.0",
       "maxCPVersion": "",
       "releaseDate": {{ .Values.capabilities.flogo.releaseDate | quote }},
       "releaseNotes": {{ .Values.capabilities.flogo.releaseNotes | quote }},
       "minVersionRequiredForUpgrade": "1.4.0",
       "minDPVersion": {
-        "dp-core-infrastructure": "1.6.0",
-        "dp-configure-namespace": "1.5.0"
+        "dp-core-infrastructure": "1.7.0",
+        "dp-configure-namespace": "1.7.0"
       }
     }
   package.json: |
@@ -42,7 +42,7 @@ data:
           {
             "version": [
               1,
-              6,
+              7,
               0
             ],
             "capabilityId": "INTEGRATIONCORE",
@@ -51,7 +51,7 @@ data:
           {
             "version": [
               1,
-              6,
+              7,
               0
             ],
             "capabilityId": "OAUTH2PROXY",
@@ -61,6 +61,7 @@ data:
         "provisioningRoles": [
           "DEV_OPS"
         ],
+        "serviceUrl": "http://flogoprovisioner:7816",
         "allowMultipleInstances": false,
         "capabilityResourceDependencies": [
           {
@@ -78,7 +79,7 @@ data:
       helmCharts:
         - name: flogoprovisioner
           namespace: ${NAMESPACE}
-          version: "1.6.2"
+          version: "1.7.5"
           repository:
             chartMuseum:
               host: ${HELM_REPO}
@@ -92,10 +93,10 @@ data:
                           enabled: ${ENABLE_APPS_FLUENTBIT_SIDECAR}
                   flogoprovisioner:
                     image:
-                      tag: 559-platform-1.6.0
+                      tag: 588-platform-1.7.0
                 config:
                   APP_INIT_IMAGE_TAG: "41"
-                  APP_HELMCHART_VERSION: "1.6.3"
+                  APP_HELMCHART_VERSION: "1.7.4"
                 publicApi:
                   ingress:
                     controllerName: ${INGRESS_CONTROLLER_NAME}
@@ -159,7 +160,7 @@ spec:
         - name: RECIPE_TARGET_LOCATION
           value: "/private/tsc/config/capabilities/platform"
         - name: RECIPE_RELEASE_VERSION
-          value: "1.6.0"
+          value: "1.7.0"
         - name: SPACE_SEPARATED_UNSUPPORTED_RECIPE_VERSIONS
           value: ""
         - name: OVERWRITE_RECIPE
