--- a/charts/tp-cp-flogo-utilities/charts/flogo-utilities/values.yaml
+++ b/charts/tp-cp-flogo-utilities/charts/flogo-utilities/values.yaml
@@ -99,9 +99,9 @@ volumes:
 flogoVSCodeExtensionExtract: true
 flogoVSCodeExtensionImages:
   - image: tp-flogo-vscode-extension
-    path: /opt/downloads/1.2.1/
-    tag: 1.2.1-b943-vscode-1.2.1
-    target_location: flogo-vscode-extension/1.2.1
+    path: /opt/downloads/1.3.0/
+    tag: 1.3.0-b1008-vscode-1.3.0
+    target_location: flogo-vscode-extension/1.3.0
 flogoVSCodeDelete: false
 flogoVSCodeDeleteVersions: ""
 
@@ -252,13 +252,17 @@ flogopluginsE:
     tags:
       - 2.2.0-b11
     default: 2.2.0-b11
+  tp-flogo-connector-mailchimp:
+      tags:
+        - 1.0.1-b02
+      default: 1.0.1-b02
 
 buildtypesExtract: true
 flogoBuildtypeImages:
   - name: tp-flogo-buildtype
     extract_image: true
     path: /var/lib/flogo/buildtypes/
-    tag: 2.25.4-b220
+    tag: 2.25.5-b233
     target_location: flogo/buildtypes
 
 probes:
