--- a/charts/tp-cp-integration-bw6/charts/bw6-webserver/templates/cp-bw6webserver.yaml
+++ b/charts/tp-cp-integration-bw6/charts/bw6-webserver/templates/cp-bw6webserver.yaml
@@ -25,8 +25,8 @@ spec:
     metadata:
       labels:
         {{- include "bw6-webserver.shared.labels.standard" . | nindent 8 }}
-        egress.networking.platform.tibco.com/internet-all: enable
-        egress.networking.platform.tibco.com/cluster-all: enable
+        networking.platform.tibco.com/internet-egress: enable
+        networking.platform.tibco.com/cluster-egress: enable
 {{- if .Values.global.enableLogging }}
       annotations:
         checksum/config: {{ include (print $.Template.BasePath "/fluentbit-configmap.yaml") . | sha256sum }}
