--- a/charts/oauth2-proxy-manifests/values.yaml
+++ b/charts/oauth2-proxy-manifests/values.yaml
@@ -72,7 +72,7 @@ alphaConfig:
 
 image:
   name: core-tp-oauth-proxy
-  tag: "v1.5.1"
+  tag: "v1.7.2"
   pullPolicy: "IfNotPresent"
   # appVersion is used by default
 
@@ -159,6 +159,7 @@ serviceAccount:
 
 ingress:
   enabled: true
+  controllerName: nginx
   # className: nginx
   path: /
   # Only used if API capabilities (networking.k8s.io/v1) allow it
@@ -270,7 +271,8 @@ podAnnotations: {}
 
 # hack because PDP-1199 is not being fixed in the upper layer to pass correct properties in the recipe
 podLabels: {
-  egress.networking.platform.tibco.com/internet-web: enable,
+  networking.platform.tibco.com/internet-web-egress: enable,
+  networking.platform.tibco.com/cp-egress: enable,
   networking.platform.tibco.com/kubernetes-api: enable
 }
 
@@ -441,7 +443,7 @@ global:
     # subscriptionId : "sub1"
     instanceId: ""   # CAPABILITY INSTANCE ID
     containerRegistry:
-      url: "reldocker.tibco.com"
+      url: "csgprdusw2reposaas.jfrog.io"
       repository: "tibco-platform-docker-prod"
     #  secret: "abcd"
     capability:
