promote platfom-bootstrap to public repo (release 1.7.0)

--- a/charts/platform-bootstrap/values.yaml
+++ b/charts/platform-bootstrap/values.yaml
@@ -1,5 +1,5 @@
 #
-# Copyright © 2023 - 2024. Cloud Software Group, Inc.
+# Copyright © 2023 - 2025. Cloud Software Group, Inc.
 # This file is subject to the license terms contained
 # in the license file that is distributed with this file.
 #
@@ -26,7 +26,7 @@ global:
 
     # Flag to enable or disable creating default network policies for a namespace
     # Default value is false. Possible values are true, false
-    createNetworkPolicy: true
+    createNetworkPolicy: false
 
     # control plane instance Id. Ex: prod, stag, p01, s01. This is to identify multiple cp installation in same cluster.
     # lowercase alphanumeric string of max 5 chars
