--- a/charts/tp-dp-monitor-agent/values.yaml
+++ b/charts/tp-dp-monitor-agent/values.yaml
@@ -16,7 +16,7 @@ global:
     subscriptionId: "sub1"
     instanceId: "qwerty"
     containerRegistry:
-      url: "reldocker.tibco.com"
+      url: "csgprdusw2reposaas.jfrog.io"
       secret: "test"
     resources:
       serviceaccount:
