--- a/charts/tp-cp-core-finops/templates/jobs.yaml
+++ b/charts/tp-cp-core-finops/templates/jobs.yaml
@@ -7,7 +7,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ include "tp-cp-core-finops.consts.appName" . }}-setup
+  name: {{ include "tp-cp-core-finops.consts.appName" . }}-setup-{{ randAlphaNum 4 | lower }}
   annotations:
     "helm.sh/hook": pre-install
     "helm.sh/hook-weight": "10"
@@ -22,7 +22,8 @@ spec:
       name: {{ include "tp-cp-core-finops.consts.appName" . }}-setup
       labels:
         {{- include "tp-cp-core-finops.shared.labels.standard" . | nindent 8 }}
-        egress.networking.platform.tibco.com/cluster-all: enable
+        networking.platform.tibco.com/cluster-egress: enable
+        networking.platform.tibco.com/database-egress: enable
         networking.platform.tibco.com/kubernetes-api: enable
     spec:
       {{- if .Values.global.podSecurityContext }}
@@ -117,7 +118,7 @@ spec:
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ include "tp-cp-core-finops.consts.appName" . }}-upgrade
+  name: {{ include "tp-cp-core-finops.consts.appName" . }}-upgrade-{{ randAlphaNum 4 | lower }}
   annotations:
     "helm.sh/hook": pre-upgrade
     "helm.sh/hook-weight": "10"
@@ -132,7 +133,8 @@ spec:
       name: {{ include "tp-cp-core-finops.consts.appName" . }}-upgrade
       labels:
         {{- include "tp-cp-core-finops.shared.labels.standard" . | nindent 8 }}
-        egress.networking.platform.tibco.com/cluster-all: enable
+        networking.platform.tibco.com/cluster-egress: enable
+        networking.platform.tibco.com/database-egress: enable
         networking.platform.tibco.com/kubernetes-api: enable
     spec:
       {{- if .Values.global.podSecurityContext }}
@@ -230,7 +232,7 @@ spec:
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ include "tp-cp-core-finops.consts.appName" . }}-cleanup
+  name: {{ include "tp-cp-core-finops.consts.appName" . }}-cleanup-{{ randAlphaNum 4 | lower }}
   annotations:
     "helm.sh/hook": post-delete
     "helm.sh/hook-weight": "10"
@@ -245,7 +247,8 @@ spec:
       name: {{ include "tp-cp-core-finops.consts.appName" . }}-cleanup
       labels:
         {{- include "tp-cp-core-finops.shared.labels.standard" . | nindent 8 }}
-        egress.networking.platform.tibco.com/cluster-all: enable
+        networking.platform.tibco.com/cluster-egress: enable
+        networking.platform.tibco.com/database-egress: enable
         networking.platform.tibco.com/kubernetes-api: enable
     spec:
       {{- if .Values.global.podSecurityContext }}
@@ -341,7 +344,7 @@ spec:
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ include "tp-cp-core-finops.consts.appName" . }}-rollback
+  name: {{ include "tp-cp-core-finops.consts.appName" . }}-rollback-{{ randAlphaNum 4 | lower }}
   annotations:
     "helm.sh/hook": pre-rollback
     "helm.sh/hook-weight": "10"
@@ -356,7 +359,8 @@ spec:
       name: {{ include "tp-cp-core-finops.consts.appName" . }}-rollback
       labels:
         {{- include "tp-cp-core-finops.shared.labels.standard" . | nindent 8 }}
-        egress.networking.platform.tibco.com/cluster-all: enable
+        networking.platform.tibco.com/cluster-egress: enable
+        networking.platform.tibco.com/database-egress: enable
         networking.platform.tibco.com/kubernetes-api: enable
     spec:
       {{- if .Values.global.podSecurityContext }}
