--- a/charts/tp-cp-hawk/charts/tp-cp-hawk-infra-querynode/templates/querynode-deployment.yaml
+++ b/charts/tp-cp-hawk/charts/tp-cp-hawk-infra-querynode/templates/querynode-deployment.yaml
@@ -20,6 +20,10 @@ spec:
         {{- include "tp-hawk-infra-querynode.shared.labels.standard" . | nindent 8 }}
         egress.networking.platform.tibco.com/internet-all: enable
         egress.networking.platform.tibco.com/cluster-all: enable
+        networking.platform.tibco.com/database-egress: enable
+        networking.platform.tibco.com/cluster-egress: enable
+        networking.platform.tibco.com/cluster-ingress: enable
+        networking.platform.tibco.com/internet-egress: enable
     spec:
       {{- if .Values.global.podSecurityContext }}
       securityContext:
