--- a/charts/tp-cp-hawk-console-recipes/templates/recipe-script.yaml
+++ b/charts/tp-cp-hawk-console-recipes/templates/recipe-script.yaml
@@ -5,7 +5,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ include "tp-cp-hawk-console-recipes.appName" . }}-script
+  name: {{ include "tp-cp-hawk-console-recipes.appName" . }}-script-{{ include "tp-cp-hawk-console-recipes.resourceSuffix" . }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "tp-cp-hawk-console-recipes.labels" . | nindent 4 }}
