Publishing CP Core RC2

--- a/charts/tp-cp-core/templates/jobs.yaml
+++ b/charts/tp-cp-core/templates/jobs.yaml
@@ -18,7 +18,7 @@ spec:
       labels:
         {{- include "tp-control-plane.shared.labels.standard" . | nindent 8 }}
         networking.platform.tibco.com/kubernetes-api: enable
-        networking.platform.tibco.com/cluster-ingress: enable
+        networking.platform.tibco.com/cluster-egress: enable
         networking.platform.tibco.com/internet-egress: enable
         networking.platform.tibco.com/database-egress: enable
     spec:
@@ -150,7 +150,7 @@ spec:
       labels:
         {{- include "tp-control-plane.shared.labels.standard" . | nindent 8 }}
         networking.platform.tibco.com/kubernetes-api: enable
-        networking.platform.tibco.com/cluster-ingress: enable
+        networking.platform.tibco.com/cluster-egress: enable
         networking.platform.tibco.com/internet-egress: enable
         networking.platform.tibco.com/database-egress: enable
     spec:
@@ -284,7 +284,7 @@ spec:
       labels:
         {{- include "tp-control-plane.shared.labels.standard" . | nindent 8 }}
         networking.platform.tibco.com/kubernetes-api: enable
-        networking.platform.tibco.com/cluster-ingress: enable
+        networking.platform.tibco.com/cluster-egress: enable
         networking.platform.tibco.com/internet-egress: enable
         networking.platform.tibco.com/database-egress: enable
     spec:
@@ -392,7 +392,7 @@ spec:
       labels:
         {{- include "tp-control-plane.shared.labels.standard" . | nindent 8 }}
         networking.platform.tibco.com/kubernetes-api: enable
-        networking.platform.tibco.com/cluster-ingress: enable
+        networking.platform.tibco.com/cluster-egress: enable
         networking.platform.tibco.com/internet-egress: enable
         networking.platform.tibco.com/database-egress: enable
     spec:
